# libphi

./: meson.build
phi/: meson.build  phidocument.c  phidocument.h  phidocumentprivate.h  phierrors.c  phierrors.h  phigiostream.c  phigiostreamprivate.h  phinodedevice.c  phinodedeviceprivate.h  phipage.c  phipage.h  phipageprivate.h  phiview.c  phiview.h
src/: app.c  meson.build
subprojects/: mupdf.wrap
subprojects/packagefiles/mupdf/: meson-thirdparty.mk  meson.build
subprojects/packagefiles/mupdf/resources/fonts/: meson.build
subprojects/packagefiles/mupdf/source/: meson.build
