fitz_src = [
	'fitz/archive.c',
	'fitz/bbox-device.c',
	'fitz/bidi-std.c',
	'fitz/bidi.c',
	'fitz/bitmap.c',
	'fitz/brotli.c',
	'fitz/buffer.c',
	'fitz/color-fast.c',
	'fitz/color-icc-create.c',
	'fitz/color-lcms.c',
	'fitz/colorspace.c',
	'fitz/compress.c',
	'fitz/compressed-buffer.c',
	'fitz/context.c',
	'fitz/crypt-aes.c',
	'fitz/crypt-arc4.c',
	'fitz/crypt-md5.c',
	'fitz/crypt-sha2.c',
	'fitz/deskew.c',
	'fitz/device.c',
	'fitz/directory.c',
	'fitz/document-all.c',
	'fitz/document.c',
	'fitz/draw-affine.c',
	'fitz/draw-blend.c',
	'fitz/draw-device.c',
	'fitz/draw-edge.c',
	'fitz/draw-edgebuffer.c',
	'fitz/draw-glyph.c',
	'fitz/draw-mesh.c',
	'fitz/draw-paint.c',
	'fitz/draw-path.c',
	'fitz/draw-rasterize.c',
	'fitz/draw-scale-simple.c',
	'fitz/draw-unpack.c',
	'fitz/encode-basic.c',
	'fitz/encode-fax.c',
	'fitz/encode-jpx.c',
	'fitz/encodings.c',
	'fitz/error.c',
	'fitz/filter-basic.c',
	'fitz/filter-brotli.c',
	'fitz/filter-dct.c',
	'fitz/filter-fax.c',
	'fitz/filter-flate.c',
	'fitz/filter-jbig2.c',
	'fitz/filter-leech.c',
	'fitz/filter-lzw.c',
	'fitz/filter-predict.c',
	'fitz/filter-sgi.c',
	'fitz/filter-thunder.c',
	'fitz/font.c',
	'fitz/ftoa.c',
	'fitz/geometry.c',
	'fitz/getopt.c',
	'fitz/glyph.c',
	'fitz/glyphbox.c',
	'fitz/gz-doc.c',
	'fitz/halftone.c',
	'fitz/harfbuzz.c',
	'fitz/hash.c',
	'fitz/heap.c',
	'fitz/image.c',
	'fitz/jmemcust.c',
	'fitz/json.c',
	'fitz/leptonica-wrap.c',
	'fitz/link.c',
	'fitz/list-device.c',
	'fitz/load-bmp.c',
	'fitz/load-gif.c',
	'fitz/load-jbig2.c',
	'fitz/load-jpeg.c',
	'fitz/load-jpx.c',
	'fitz/load-jxr.c',
	'fitz/load-png.c',
	'fitz/load-pnm.c',
	'fitz/load-psd.c',
	'fitz/load-tiff.c',
	'fitz/log.c',
	'fitz/memento.c',
	'fitz/memory.c',
	'fitz/noto.c',
	'fitz/ocr-device.c',
	'fitz/outline.c',
	'fitz/output-cbz.c',
	'fitz/output-csv.c',
	'fitz/output-docx.c',
	'fitz/output-jpeg.c',
	'fitz/output-pcl.c',
	'fitz/output-pclm.c',
	'fitz/output-pdfocr.c',
	'fitz/output-png.c',
	'fitz/output-pnm.c',
	'fitz/output-ps.c',
	'fitz/output-psd.c',
	'fitz/output-pwg.c',
	'fitz/output-svg.c',
	'fitz/output.c',
	'fitz/path.c',
	'fitz/pixmap.c',
	'fitz/pool.c',
	'fitz/printf.c',
	'fitz/random.c',
	'fitz/regexp.c',
	'fitz/separation.c',
	'fitz/shade.c',
	'fitz/skew.c',
	'fitz/stext-boxer.c',
	'fitz/stext-device.c',
	'fitz/stext-output.c',
	'fitz/stext-para.c',
	'fitz/stext-search.c',
	'fitz/stext-table.c',
	'fitz/store.c',
	'fitz/stream-open.c',
	'fitz/stream-read.c',
	'fitz/string.c',
	'fitz/strtof.c',
	'fitz/subset-cff.c',
	'fitz/subset-ttf.c',
	'fitz/svg-device.c',
	'fitz/test-device.c',
	'fitz/text-decoder.c',
	'fitz/text.c',
	'fitz/time.c',
	'fitz/trace-device.c',
	'fitz/track-usage.c',
	'fitz/transition.c',
	'fitz/tree.c',
	'fitz/ucdn.c',
	'fitz/uncfb.c',
	'fitz/unlibarchive.c',
	'fitz/untar.c',
	'fitz/unzip.c',
	'fitz/util.c',
	'fitz/warp.c',
	'fitz/writer.c',
	'fitz/xml-write.c',
	'fitz/xml.c',
	'fitz/xmltext-device.c',
	'fitz/zip.c',
]

pdf_src = [
	'pdf/pdf-af.c',
	'pdf/pdf-annot.c',
	'pdf/pdf-appearance.c',
	'pdf/pdf-clean-file.c',
	'pdf/pdf-clean.c',
	'pdf/pdf-cmap-load.c',
	'pdf/pdf-cmap-parse.c',
	'pdf/pdf-cmap.c',
	'pdf/pdf-colorspace.c',
	'pdf/pdf-crypt.c',
	'pdf/pdf-device.c',
	'pdf/pdf-event.c',
	'pdf/pdf-font-add.c',
	'pdf/pdf-font.c',
	'pdf/pdf-form.c',
	'pdf/pdf-function.c',
	'pdf/pdf-graft.c',
	'pdf/pdf-image-rewriter.c',
	'pdf/pdf-image.c',
	'pdf/pdf-interpret.c',
	'pdf/pdf-js.c',
	'pdf/pdf-label.c',
	'pdf/pdf-layer.c',
	'pdf/pdf-layout.c',
	'pdf/pdf-lex.c',
	'pdf/pdf-link.c',
	'pdf/pdf-metrics.c',
	'pdf/pdf-nametree.c',
	'pdf/pdf-object.c',
	'pdf/pdf-op-buffer.c',
	'pdf/pdf-op-color.c',
	'pdf/pdf-op-filter.c',
	'pdf/pdf-op-run.c',
	'pdf/pdf-outline.c',
	'pdf/pdf-page.c',
	'pdf/pdf-parse.c',
	'pdf/pdf-pattern.c',
	'pdf/pdf-recolor.c',
	'pdf/pdf-repair.c',
	'pdf/pdf-resources.c',
	'pdf/pdf-run.c',
	'pdf/pdf-shade-recolor.c',
	'pdf/pdf-shade.c',
	'pdf/pdf-signature.c',
	'pdf/pdf-store.c',
	'pdf/pdf-stream.c',
	'pdf/pdf-subset.c',
	'pdf/pdf-type3.c',
	'pdf/pdf-unicode.c',
	'pdf/pdf-util.c',
	'pdf/pdf-write.c',
	'pdf/pdf-xobject.c',
	'pdf/pdf-xref.c',
	'pdf/pdf-zugferd.c',
]

xps_src = [
	'xps/xps-common.c',
	'xps/xps-doc.c',
	'xps/xps-glyphs.c',
	'xps/xps-gradient.c',
	'xps/xps-image.c',
	'xps/xps-link.c',
	'xps/xps-outline.c',
	'xps/xps-path.c',
	'xps/xps-resource.c',
	'xps/xps-tile.c',
	'xps/xps-util.c',
	'xps/xps-zip.c',
]

svg_src = [
	'svg/svg-color.c',
	'svg/svg-doc.c',
	'svg/svg-parse.c',
	'svg/svg-run.c',
]

cbz_src = [
	'cbz/mucbz.c',
	'cbz/muimg.c',
]

html_src = [
	'html/css-apply.c',
	'html/css-parse.c',
	'html/epub-doc.c',
	'html/html-doc.c',
	'html/html-font.c',
	'html/html-layout.c',
	'html/html-outline.c',
	'html/html-parse.c',
	'html/mobi.c',
	'html/office.c',
	'html/story-writer.c',
	'html/txt.c',
	'html/xml-dom.c',
]

doc_handlers_src = [
	pdf_src,
	xps_src,
	svg_src,
	cbz_src,
	html_src,
]

mupdf_lib = library('mupdf', fitz_src, font_src, doc_handlers_src,
	include_directories: inc,
	dependencies: thirdparty_deps,
	install: true,
	soversion: version_split[1],
	version: meson.project_version()
)

mupdf_dep = declare_dependency(
	include_directories: inc,
	link_with: mupdf_lib,
)
meson.override_dependency('mupdf', mupdf_dep)

mupdf_pc = import('pkgconfig').generate(mupdf_lib,
	name: 'mupdf',
	version: meson.project_version(),
	description: 'Library for opening, manipulating and rendering documents'
)
