fonts = [
	'urw/NimbusMonoPS-Regular.cff',
	'urw/NimbusMonoPS-Italic.cff',
	'urw/NimbusMonoPS-Bold.cff',
	'urw/NimbusMonoPS-BoldItalic.cff',

	'urw/NimbusSans-Regular.cff',
	'urw/NimbusSans-Italic.cff',
	'urw/NimbusSans-Bold.cff',
	'urw/NimbusSans-BoldItalic.cff',

	'urw/NimbusRoman-Regular.cff',
	'urw/NimbusRoman-Italic.cff',
	'urw/NimbusRoman-Bold.cff',
	'urw/NimbusRoman-BoldItalic.cff',

	'urw/StandardSymbolsPS.cff',
	'urw/Dingbats.cff',

	'sil/CharisSIL.cff',
	'sil/CharisSIL-Italic.cff',
	'sil/CharisSIL-Bold.cff',
	'sil/CharisSIL-BoldItalic.cff',

	'urw/NimbusBoxes-Regular.cff',

	'noto/NotoSerif-Regular.otf',
	'noto/NotoNastaliqUrdu-Regular.otf',
	'noto/NotoNaskhArabic-Regular.otf',

	'noto/NotoSansAdlam-Regular.otf',
	'noto/NotoSerifAhom-Regular.otf',
	'noto/NotoSansAnatolianHieroglyphs-Regular.otf',
	'noto/NotoSerifArmenian-Regular.otf',
	'noto/NotoSansAvestan-Regular.otf',
	'noto/NotoSerifBalinese-Regular.otf',
	'noto/NotoSansBamum-Regular.otf',
	'noto/NotoSansBassaVah-Regular.otf',
	'noto/NotoSansBatak-Regular.otf',
	'noto/NotoSerifBengali-Regular.otf',
	'noto/NotoSansBhaiksuki-Regular.otf',
	'noto/NotoSansBrahmi-Regular.otf',
	'noto/NotoSansBuginese-Regular.otf',
	'noto/NotoSansBuhid-Regular.otf',
	'noto/NotoSansCanadianAboriginal-Regular.otf',
	'noto/NotoSansCarian-Regular.otf',
	'noto/NotoSansCaucasianAlbanian-Regular.otf',
	'noto/NotoSansChakma-Regular.otf',
	'noto/NotoSansCham-Regular.otf',
	'noto/NotoSansCherokee-Regular.otf',
	'noto/NotoSansChorasmian-Regular.otf',
	'noto/NotoSansCoptic-Regular.otf',
	'noto/NotoSansCuneiform-Regular.otf',
	'noto/NotoSansCypriot-Regular.otf',
	'noto/NotoSansCyproMinoan-Regular.otf',
	'noto/NotoSansDeseret-Regular.otf',
	'noto/NotoSerifDevanagari-Regular.otf',
	'noto/NotoSerifDivesAkuru-Regular.otf',
	'noto/NotoSerifDogra-Regular.otf',
	'noto/NotoSansDuployan-Regular.otf',
	'noto/NotoSansEgyptianHieroglyphs-Regular.otf',
	'noto/NotoSansElbasan-Regular.otf',
	'noto/NotoSansElymaic-Regular.otf',
	'noto/NotoSerifEthiopic-Regular.otf',
	'noto/NotoSerifGeorgian-Regular.otf',
	'noto/NotoSansGlagolitic-Regular.otf',
	'noto/NotoSansGothic-Regular.otf',
	'noto/NotoSerifGrantha-Regular.otf',
	'noto/NotoSerifGujarati-Regular.otf',
	'noto/NotoSansGunjalaGondi-Regular.otf',
	'noto/NotoSerifGurmukhi-Regular.otf',
	'noto/NotoSansHanifiRohingya-Regular.otf',
	'noto/NotoSansHanunoo-Regular.otf',
	'noto/NotoSansHatran-Regular.otf',
	'noto/NotoSerifHebrew-Regular.otf',
	'noto/NotoSansImperialAramaic-Regular.otf',
	'noto/NotoSansInscriptionalPahlavi-Regular.otf',
	'noto/NotoSansInscriptionalParthian-Regular.otf',
	'noto/NotoSansJavanese-Regular.otf',
	'noto/NotoSansKaithi-Regular.otf',
	'noto/NotoSerifKannada-Regular.otf',
	'noto/NotoSansKayahLi-Regular.otf',
	'noto/NotoSansKawi-Regular.otf',
	'noto/NotoSansKharoshthi-Regular.otf',
	'noto/NotoSerifKhitanSmallScript-Regular.otf',
	'noto/NotoSerifKhmer-Regular.otf',
	'noto/NotoSerifKhojki-Regular.otf',
	'noto/NotoSansKhudawadi-Regular.otf',
	'noto/NotoSerifLao-Regular.otf',
	'noto/NotoSansLepcha-Regular.otf',
	'noto/NotoSansLimbu-Regular.otf',
	'noto/NotoSansLinearA-Regular.otf',
	'noto/NotoSansLinearB-Regular.otf',
	'noto/NotoSansLisu-Regular.otf',
	'noto/NotoSansLycian-Regular.otf',
	'noto/NotoSansLydian-Regular.otf',
	'noto/NotoSansMahajani-Regular.otf',
	'noto/NotoSerifMakasar-Regular.otf',
	'noto/NotoSerifMalayalam-Regular.otf',
	'noto/NotoSansMandaic-Regular.otf',
	'noto/NotoSansManichaean-Regular.otf',
	'noto/NotoSansMarchen-Regular.otf',
	'noto/NotoSansMasaramGondi-Regular.otf',
	'noto/NotoSansMedefaidrin-Regular.otf',
	'noto/NotoSansMeeteiMayek-Regular.otf',
	'noto/NotoSansMendeKikakui-Regular.otf',
	'noto/NotoSansMeroitic-Regular.otf',
	'noto/NotoSansMiao-Regular.otf',
	'noto/NotoSansModi-Regular.otf',
	'noto/NotoSansMongolian-Regular.otf',
	'noto/NotoSansMro-Regular.otf',
	'noto/NotoSansMultani-Regular.otf',
	'noto/NotoSerifMyanmar-Regular.otf',
	'noto/NotoSansNabataean-Regular.otf',
	'noto/NotoSansNagMundari-Regular.otf',
	'noto/NotoSansNandinagari-Regular.otf',
	'noto/NotoSansNewa-Regular.otf',
	'noto/NotoSansNewTaiLue-Regular.otf',
	'noto/NotoSansNKo-Regular.otf',
	'noto/NotoSansNushu-Regular.otf',
	'noto/NotoSerifNyiakengPuachueHmong-Regular.otf',
	'noto/NotoSansOgham-Regular.otf',
	'noto/NotoSansOldHungarian-Regular.otf',
	'noto/NotoSansOldItalic-Regular.otf',
	'noto/NotoSansOldNorthArabian-Regular.otf',
	'noto/NotoSansOldPermic-Regular.otf',
	'noto/NotoSansOldPersian-Regular.otf',
	'noto/NotoSansOldSogdian-Regular.otf',
	'noto/NotoSansOldSouthArabian-Regular.otf',
	'noto/NotoSansOldTurkic-Regular.otf',
	'noto/NotoSerifOldUyghur-Regular.otf',
	'noto/NotoSansOlChiki-Regular.otf',
	'noto/NotoSerifOriya-Regular.otf',
	'noto/NotoSansOsage-Regular.otf',
	'noto/NotoSansOsmanya-Regular.otf',
	'noto/NotoSansPahawhHmong-Regular.otf',
	'noto/NotoSansPalmyrene-Regular.otf',
	'noto/NotoSansPauCinHau-Regular.otf',
	'noto/NotoSansPhagsPa-Regular.otf',
	'noto/NotoSansPhoenician-Regular.otf',
	'noto/NotoSansPsalterPahlavi-Regular.otf',
	'noto/NotoSansRejang-Regular.otf',
	'noto/NotoSansRunic-Regular.otf',
	'noto/NotoSansSamaritan-Regular.otf',
	'noto/NotoSansSaurashtra-Regular.otf',
	'noto/NotoSansSharada-Regular.otf',
	'noto/NotoSansShavian-Regular.otf',
	'noto/NotoSansSiddham-Regular.otf',
	'noto/NotoSerifSinhala-Regular.otf',
	'noto/NotoSansSogdian-Regular.otf',
	'noto/NotoSansSoraSompeng-Regular.otf',
	'noto/NotoSansSoyombo-Regular.otf',
	'noto/NotoSansSundanese-Regular.otf',
	'noto/NotoSansSylotiNagri-Regular.otf',
	'noto/NotoSansSyriac-Regular.otf',
	'noto/NotoSansTagalog-Regular.otf',
	'noto/NotoSansTagbanwa-Regular.otf',
	'noto/NotoSansTaiLe-Regular.otf',
	'noto/NotoSansTaiTham-Regular.otf',
	'noto/NotoSansTaiViet-Regular.otf',
	'noto/NotoSansTakri-Regular.otf',
	'noto/NotoSansTangsa-Regular.otf',
	'noto/NotoSerifTamil-Regular.otf',
	'noto/NotoSerifTelugu-Regular.otf',
	'noto/NotoSansThaana-Regular.otf',
	'noto/NotoSerifThai-Regular.otf',
	'noto/NotoSerifTibetan-Regular.otf',
	'noto/NotoSansTifinagh-Regular.otf',
	'noto/NotoSansTirhuta-Regular.otf',
	'noto/NotoSerifToto-Regular.otf',
	'noto/NotoSansUgaritic-Regular.otf',
	'noto/NotoSansVai-Regular.otf',
	'noto/NotoSerifVithkuqi-Regular.otf',
	'noto/NotoSansWancho-Regular.otf',
	'noto/NotoSansWarangCiti-Regular.otf',
	'noto/NotoSerifYezidi-Regular.otf',
	'noto/NotoSansYi-Regular.otf',
	'noto/NotoSansZanabazarSquare-Regular.otf',

	'noto/NotoSansMath-Regular.otf',
	'noto/NotoMusic-Regular.otf',
	'noto/NotoSansSymbols-Regular.otf',
	'noto/NotoSansSymbols2-Regular.otf',
	'noto/NotoEmoji-Regular.ttf',

	'han/SourceHanSerif-Regular.ttc',
]

font_src = []
foreach font : fonts
	font_src += hexdump_gen.process(font)
endforeach
